[package]
name = "asmquery"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hlist = "0.1"
smallbitvec = "2.4"
generic-array = { git = "https://github.com/Vurich/generic-array.git" }
lazy_static = "1.4"
typenum = "1.11"
